--- a/INTRO.html
+++ b/INTRO.html
@@ -322,6 +322,12 @@ div.tocify {
     <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
+    <li>
+      <a href="LECTURE12.html">Population Viability Analysis</a>
+    </li>
+    <li>
+      <a href="LECTURE13.html">Metapopulations</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -341,13 +347,19 @@ div.tocify {
       <a href="LAB3.html">Lab 3: age-structured population growth</a>
     </li>
     <li>
-      <a href="LAB4.html">Lab 4: matrix population models (short)</a>
+      <a href="LAB4.html">Lab 4: matrix population models</a>
     </li>
     <li>
       <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
     </li>
     <li>
+      <a href="LAB6.html">Lab 6: metapopulations!</a>
+    </li>
+    <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
+    </li>
+    <li>
+      <a href="EXTRA_CREDIT.html">Extra Credit!</a>
     </li>
   </ul>
 </li>
