--- a/LECTURE11.html
+++ b/LECTURE11.html
@@ -323,6 +323,12 @@ div.tocify {
     <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
+    <li>
+      <a href="LECTURE12.html">Population Viability Analysis</a>
+    </li>
+    <li>
+      <a href="LECTURE13.html">Metapopulations</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -342,13 +348,19 @@ div.tocify {
       <a href="LAB3.html">Lab 3: age-structured population growth</a>
     </li>
     <li>
-      <a href="LAB4.html">Lab 4: matrix population models (short)</a>
+      <a href="LAB4.html">Lab 4: matrix population models</a>
     </li>
     <li>
       <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
     </li>
     <li>
+      <a href="LAB6.html">Lab 6: metapopulations!</a>
+    </li>
+    <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
+    </li>
+    <li>
+      <a href="EXTRA_CREDIT.html">Extra Credit!</a>
     </li>
   </ul>
 </li>
@@ -375,10 +387,10 @@ div.tocify {
 
 
 <p><strong>Q</strong>: Is the intrinsic rate of growth <span class="math inline">\(r_{max}\)</span> positive or negative for most species on earth? Why???</p>
-<p><strong>Q</strong>: Given that most species are capable of sustained growth and attaining large population size under favorable conditions, how do populations get small in the first place? Why are some populations declining despite the intrinsic ability to grow?</p>
+<p><strong>Q</strong>: Given that most species are capable of sustained growth and attaining large population size under favorable conditions, how do populations get small in the first place? Why are some populations declining despite their intrinsic ability to grow?</p>
 <div id="threats-to-populations" class="section level2">
 <h2>Threats to populations</h2>
-<p>The answer of course is that the intrinsic ability to grow is not the whole story. Populations are stocks with inflows and outflows- and if mortalities exceed births <em>under present conditions</em> the population will decline.</p>
+<p>The answer of course is that the intrinsic ability to grow under ideal conditions is not the whole story. Populations are stocks with inflows and outflows- and if mortalities exceed births <em>under present conditions</em> the population will decline.</p>
 <p>In the “small-population paradigm” lecture we discussed several <strong>stochastic threats</strong> to populations, including loss of genetic diversity (genetic drift), demographic stochasticity, catastrophic environmental events. These threats only really affect small populations. Large populations are mostly resilient to stochastic threats.</p>
 <p>Large populations can be threatened though! Factors that threaten large populations are usually <strong>deterministic</strong>!</p>
 <p>The <strong>declining population paradigm</strong> focuses on the factors that make large populations small – that is, it is the <em>study of those deterministic processes that cause population decline, and how these processes may be reversed through effective conservation management</em>.</p>
@@ -429,12 +441,12 @@ div.tocify {
 <div id="the-controversy-in-conservation-biology" class="section level2">
 <h2>The controversy in Conservation Biology!</h2>
 <p>So, which one is more important for conservation? The declining-population paradigm or the small-population paradigm??</p>
-<p>This “controversy” was ignited by a very influential paper by Graeme Caughley in <em>Journal of Animal Ecology</em> in 1994.</p>
+<p>This “controversy” was ignited by a <a href="caughley1.pdf">very influential paper by Graeme Caughley</a> in <em>Journal of Animal Ecology</em> in 1994.</p>
 <div class="figure">
 <img src="caughley1.jpg" />
 
 </div>
-<p>In this paper, Caughley defines the two competing paradigms, and expresses a bias towards one and against the other…</p>
+<p>In this paper, Caughley defines the two competing paradigms, and expresses a bias towards one paradigm and against the other…</p>
 <blockquote>
 <p>Conservation biology has two threads: the small-population paradigm which deals with the effect of smallness on the persistence of a population, and the declining- population paradigm which deals with the cause of smallness and its cure.</p>
 </blockquote>
@@ -443,17 +455,38 @@ div.tocify {
 <div id="in-class-exercise-deterministic-threats" class="section level3">
 <h3>In-Class Exercise: Deterministic threats</h3>
 <p>Let’s try a worked example to illustrate the above points.</p>
-<p>Let’s start with a basic scalar, density-dependent population, that should look something like this:</p>
+<p>Let’s start with a basic scalar, density-dependent population – should look something like this:</p>
+<p>You can clone this model by clicking <a href="https://insightmaker.com/insight/74417/ICE-declining-population-paradigm">here</a></p>
 <div class="figure">
 <img src="IM5.jpg" />
 
 </div>
-<p>Let’s add a harvest process!</p>
-<ol style="list-style-type: decimal">
-<li></li>
-</ol>
-<p>Let’s add a habitat loss process!</p>
-<p>Let’s add a …</p>
+<p>You should see logistic growth if you hit the simulate button.</p>
+<p>For this exercise, let’s change the initial population to 200 (near K).</p>
+<p>Also, make sure that the time step is 1 year, and the model should run for 30 years.</p>
+<p>Before adding any threats, let’s add <strong>demographic stochasticity</strong> into this model!</p>
+<p><strong>Let’s add a harvest process!</strong></p>
+<ul>
+<li>Assume that harvest is limited to 10% of the population each year. However, the true harvest rate is stochastic- occasionally harvest goes as high as 15%, and occasionally as low as 5%.</li>
+</ul>
+<p><strong>Q</strong>: is the variation in harvest rates best considered a type of <em>demographic stochasticity</em>, or a type of <em>environmental stochasticity</em>?</p>
+<p><strong>Q</strong>: why doesn’t the population decline to extinction? What has the harvest process done in this case?</p>
+<p><strong>Let’s add a habitat loss process!</strong></p>
+<ul>
+<li><p>Assume that habitat loss results in larger density-dependence terms- that is, because there is less habitat, the effects of crowding are more pronounced.</p></li>
+<li><p>Let’s model the case where both density dependence terms are multiplied by 1.1 each year (simulating 10% habitat loss each year). You can do this in InsightMaker using the following formula (for both density dependence terms):</p></li>
+</ul>
+<pre><code>0.001 * 1.1^Years()</code></pre>
+<ul>
+<li>Add a new variable to represent carrying capacity. Recall that K is defined as:</li>
+</ul>
+<p><span class="math inline">\(\frac{b-d}{a+c}\)</span></p>
+<ul>
+<li><p>Run the simulation to visually track K along with population dynamics! Does it look right?</p></li>
+<li><p>Try running the model with only habitat loss (no harvest - set harvest to zero).</p></li>
+<li><p>Try changing the harvest process to be 10 individuals per year instead of 10% of the population per year. How does this change the results?</p></li>
+<li><p>What would happen if the habitat loss process were better represented by a <em>linear</em> versus <em>exponential</em> decline in K??</p></li>
+</ul>
 <p><a href="LECTURE12.html">–go to next lecture–</a></p>
 </div>
 </div>
