--- a/index.html
+++ b/index.html
@@ -323,6 +323,12 @@ div.tocify {
     <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
+    <li>
+      <a href="LECTURE12.html">Population Viability Analysis</a>
+    </li>
+    <li>
+      <a href="LECTURE13.html">Metapopulations</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -342,13 +348,19 @@ div.tocify {
       <a href="LAB3.html">Lab 3: age-structured population growth</a>
     </li>
     <li>
-      <a href="LAB4.html">Lab 4: matrix population models (short)</a>
+      <a href="LAB4.html">Lab 4: matrix population models</a>
     </li>
     <li>
       <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
     </li>
     <li>
+      <a href="LAB6.html">Lab 6: metapopulations!</a>
+    </li>
+    <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
+    </li>
+    <li>
+      <a href="EXTRA_CREDIT.html">Extra Credit!</a>
     </li>
   </ul>
 </li>
@@ -373,6 +385,7 @@ div.tocify {
 </div>
 
 
+<p><a href="https://unr.instructure.com/courses/15896/quizzes/24149">Quiz #2</a></p>
 <p><strong>Instructor:</strong> Kevin Shoemaker<br />
 <strong>Teaching Assistant</strong> Margarete Walden<br />
 <strong>Office</strong>: FA 220E<br />
