--- a/schedule.html
+++ b/schedule.html
@@ -226,6 +226,12 @@ $(document).ready(function () {
     <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
+    <li>
+      <a href="LECTURE12.html">Population Viability Analysis</a>
+    </li>
+    <li>
+      <a href="LECTURE13.html">Metapopulations</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -245,13 +251,19 @@ $(document).ready(function () {
       <a href="LAB3.html">Lab 3: age-structured population growth</a>
     </li>
     <li>
-      <a href="LAB4.html">Lab 4: matrix population models (short)</a>
+      <a href="LAB4.html">Lab 4: matrix population models</a>
     </li>
     <li>
       <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
     </li>
     <li>
+      <a href="LAB6.html">Lab 6: metapopulations!</a>
+    </li>
+    <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
+    </li>
+    <li>
+      <a href="EXTRA_CREDIT.html">Extra Credit!</a>
     </li>
   </ul>
 </li>
@@ -277,7 +289,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Becuase this is the first time this course is being taught, this schedule is highly subject to change!!! Please check for updates frequently!</p>
+<p>Because this is the first time this course is being taught, this schedule is highly subject to change!!! Please check for updates frequently!</p>
 <table>
 <thead>
 <tr class="header">
