Updated for spring 2018

--- a/INTRO.html
+++ b/INTRO.html
@@ -422,7 +422,7 @@ div.tocify {
 </div>
 <div id="summary" class="section level2">
 <h2>Summary</h2>
-<p>In this class we will explore how the concepts of population ecology can be applied to real-world systems to support and improve wildlife conservation and management. To take this course you should already have a basic grounding in the field of ecology (e.g., BIOL 314, NRES 217) and you should already have taken Dr. Stewart’s class in wildlife ecology and management (NRES 310). NRES 470 is meant to be a bridge between NRES 310 and NRES 488 (Dynamics and Management of Wildlife Populations), which covers advanced tools like Program MARK in detail. This class is closely allied with NRES 421 (Conservation Biology), in that we learn and apply one of the most important tools used by conservation biologists and wildlife managers – quantitative population and habitat models!</p>
+<p>In this class we will explore how the concepts of <em>population ecology</em> can be applied to real-world systems to support and improve wildlife conservation and management. To take this course you should already have a basic grounding in the field of ecology (e.g., BIOL 314, NRES 217) and you should already have taken Dr. Stewart’s class in wildlife ecology and management (NRES 310). NRES 470 is meant to be a bridge between NRES 310 and NRES 488 (Dynamics and Management of Wildlife Populations), which covers advanced tools like Program MARK in detail. This class is closely allied with NRES 421 (Conservation Biology), in that we learn and apply one of the most important tools used by conservation biologists and wildlife managers – quantitative population and habitat models!</p>
 </div>
 <div id="syllabus" class="section level2">
 <h2>Syllabus:</h2>
