--- a/LECTURE1.html
+++ b/LECTURE1.html
@@ -414,7 +414,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">A whole-systems approach to population ecology</h1>
 <h4 class="author"><em>NRES 470/670</em></h4>
-<h4 class="date"><em>Jan 19, 2017</em></h4>
+<h4 class="date"><em>Jan 19, 2018</em></h4>
 
 </div>
 
@@ -449,7 +449,7 @@ div.tocify {
 <h2>Computer programming and systems thinking</h2>
 <p>Modern computers have reduced or eliminated many of the barriers to understanding how complex systems behave, and as a result <strong>specialized software and computer programming</strong> are a critical component to modern whole-systems analysis, including <strong>ecosystems</strong> analyses. Armed with basic facility with computer programming, ecologists and natural resource professionals can formalize their understanding of the natural systems in which they work, accounting for complex biological realities that may have been ignored if these tools were not available. <strong>In this course, we will learn to harness the power of computer simulations for understanding and managing natural populations</strong>.</p>
 <p>By the end of this course, students will have the ability to program their own <em>whole-systems models</em> in InsightMaker, and use specialized software for parameterizing these models (e.g., Program MARK, various <strong>R</strong> packages)</p>
-<p><strong>The course motto</strong>: <em>Get messy</em>! This might sound funny for a computer-based class. But just as ecological systems are complex and messy, models sometimes get messy. Don’t be afraid to model messy systems. And above all, don’t be afraid to be wrong- that attitude is the enemy of successful computer programming, and therefore the enemy of good wildlife management! When we build our own algorithms, we can be entering uncharted territory. And this can be difficult and dangerous, but ultimately rewarding!</p>
+<p><strong>The course motto</strong>: <em>Get messy</em>! This might sound funny for a computer-based class. But just as ecological systems are complex and messy, models sometimes get messy. Don’t be afraid to model messy systems. And above all, <strong>don’t be afraid to be wrong</strong> (especially at first)- that attitude is the enemy of successful computer programming, and of good wildlife management! When we build our own algorithms, we can be entering uncharted territory. And this can be difficult and dangerous, but ultimately rewarding! Keep trying, and stay positive!</p>
 <p>Of course, getting messy means not just reading and listening to lectures, it means <em>learning by doing</em>! Instructor-led lectures will be kept short, and we will spend significant class time (and pretty much all of lab time) on our computers, working through problems.</p>
 </div>
 <div id="in-class-exercise-insightmaker" class="section level2">
