--- a/LECTURE15.html
+++ b/LECTURE15.html
@@ -584,7 +584,7 @@ div.tocify {
 <li><a href="https://www.astronomyclub.xyz/maternal-effect/does-ecology-have-laws.html">Allometries</a>
 <ul>
 <li>e.g., Fenchel’s allometry</li>
-<li>(also known as “MacroEcology”)</li>
+<li>(also known as “Macroecology”)</li>
 </ul></li>
 </ul>
 <div class="figure">
