--- a/LECTURE3.html
+++ b/LECTURE3.html
@@ -426,7 +426,7 @@ div.tocify {
 </div>
 <p>The main point of this essay can be summed up by the following (a direct quote):</p>
 <blockquote>
-<p>The power of population is infinitely greater than the power in the earth to produce subsistence for man&quot; - The Rev. Thomas Malthus</p>
+<p>“The power of population is infinitely greater than the power in the earth to produce subsistence for man” - The Rev. Thomas Malthus</p>
 </blockquote>
 <p>Or in a more verbose form…</p>
 <blockquote>
