--- a/LECTURE5.html
+++ b/LECTURE5.html
@@ -453,7 +453,7 @@ div.tocify {
 </div>
 <div id="in-class-exercise-allee-effect" class="section level2">
 <h2>In-class exercise: Allee effect</h2>
-<p>In this exercise we will explore the implications of <strong>postitive density dependence</strong> on vital rates.</p>
+<p>In this exercise we will explore the implications of <strong>positive density dependence</strong> on vital rates.</p>
 <ol style="list-style-type: decimal">
 <li>In InsightMaker, load up the logistic model with vital rates – that is, where <span class="math inline">\(b\)</span> and <span class="math inline">\(d\)</span> are each modeled density-dependent. It should look something like this (or if you don’t already have this, load it from <a href="https://insightmaker.com/insight/70353/Logistic-Growth-1#">here</a>):</li>
 </ol>
