--- a/LECTURE6.html
+++ b/LECTURE6.html
@@ -567,7 +567,7 @@ barplot(Death_rate,xlab=&quot;Age&quot;,ylab=&quot;d, per-capita death rate&quot
 <li>If the net reproductive rate, <span class="math inline">\(R_0\)</span> is positive, then the population is above the <strong>replacement rate</strong> of 1, and therefore the population will grow. If <span class="math inline">\(R_0\)</span> is negative, then the population will decline. This sounds familiar, right? Just like the finite rate of growth, <span class="math inline">\(\lambda\)</span>.</li>
 </ol>
 <p>BUT, what is the time frame of <span class="math inline">\(R_0\)</span>? What is the timeframe of <span class="math inline">\(\lambda\)</span>? They are different right? The difference is that <span class="math inline">\(R_0\)</span> describes growth per <strong>generation</strong>!.</p>
-<p>What is a <strong>generation</strong>? The most common definition is the <em>Average age of the parents of all the offspring produced by a single cohort</em>. This can be computed from the life table as:</p>
+<p>What is a <strong>generation</strong>? The most common definition (for generation time) is the <em>Average age of the parents of all the offspring produced by a single cohort</em>. This can be computed from the life table as:</p>
 <p><span class="math inline">\(G = \frac{\sum_{x=0}^{k}l(x)\cdot b(x)\cdot x}{\sum_{x=0}^{k}l(x)\cdot b(x)}\)</span></p>
 <p>See if you can implement this in Excel (or whatever spreadsheet software you use!).</p>
 <p><strong>Q:</strong> What is the <em>generation time</em> of the population in the table?</p>
