--- a/index.html
+++ b/index.html
@@ -419,23 +419,21 @@ div.tocify {
 
 
 <p><strong>Instructor:</strong> Kevin Shoemaker<br />
-<strong>Teaching Assistant</strong> Margarete Walden<br />
-<strong>Office</strong>: FA 220E<br />
+<strong>Teaching Assistant</strong> Ben Sedinger<br />
+<strong>Instructor’s Office</strong>: FA 220E<br />
 <strong>Phone</strong>: (775) 682-7449<br />
-<strong>Email</strong>: kshoemaker_at_cabnr.unr.edu<br />
-<strong>Office hours</strong>:<br />
-- Shoemaker: Tuesdays from 1 to 3pm (FA 220E)<br />
-- Walden: Thursdays from 11am to 1pm (FA 235)<br />
-<strong>Website</strong>: <a href="http://naes.unr.edu/shoemaker/teaching/NRES-470/index.html">naes.unr.edu/shoemaker/teaching/NRES-470</a></p>
+<strong>Email</strong>: kshoemaker_at_cabnr.unr.edu</p>
+<p><strong>Website</strong>: <a href="http://naes.unr.edu/shoemaker/teaching/NRES-470/index.html">naes.unr.edu/shoemaker/teaching/NRES-470</a></p>
 <div id="course-meeting-times" class="section level3">
 <h3>Course Meeting Times</h3>
-<p><strong>Lecture &amp; Discussion</strong>: T, Th at 9:30am (50 mins) (NOTE: please bring your laptop to class!)<br />
-<strong>Lab</strong>: F at 11am (3 hours)<br />
-<strong>Office hours</strong> Tues from 1 to 3pm</p>
+<p><strong>Lecture &amp; Discussion</strong>: M, W at 10am (50 mins) (NOTE: please bring your laptop to class!)<br />
+<strong>Lab</strong>: F at 10am (3 hours) <strong>Office hours</strong>:<br />
+- Shoemaker: Wed from 11 to noon (FA 220E)<br />
+- Sedinger: TBD</p>
 <ul>
-<li>Lectures will be held in <strong>OB 203</strong><br />
+<li>Lectures and Labs will be held in <strong>FA 301</strong><br />
 </li>
-<li>Labs will be held in the NRES computer lab (<strong>FA 234</strong>)</li>
+<li>Labs may occasionally be held in the NRES computer lab (<strong>FA 234</strong>)</li>
 </ul>
 </div>
 <div id="texts" class="section level3">
@@ -444,47 +442,47 @@ div.tocify {
 <li><a href="https://www.amazon.com/Primer-Ecology-Fourth-Nicholas-Gotelli/dp/0878933182">Gotelli, N. J. (1995). A primer of ecology</a><br />
 </li>
 <li><a href="http://beyondconnectingthedots.com/">Beyond Connecting the Dots</a> (free download)<br />
-• Additional readings from the primary literature will be assigned for discussion.</li>
+• Additional readings from the primary literature will be assigned for discussion periodically.</li>
 </ul>
 </div>
 <div id="software" class="section level3">
 <h3>Software</h3>
 <ul>
-<li><a href="https://insightmaker.com/">InsightMaker- free web-based systems modeling tool</a><br />
+<li><a href="https://insightmaker.com/">InsightMaker- free web-based systems modeling tool</a>(no installation needed)<br />
 </li>
 <li><a href="https://cran.r-project.org/">R- free statistical programming language</a><br />
 </li>
 <li><a href="http://warnercnr.colostate.edu/~gwhite/mark/mark.htm">Program MARK</a><br />
 </li>
-<li>MS Excel (hopefully you already have this or equivalent spreadsheet software on your computer!)</li>
+<li>MS Excel (hopefully you already have this or equivalent spreadsheet software on your laptop!)</li>
 </ul>
 </div>
 <div id="prerequisites" class="section level3">
 <h3>Prerequisites</h3>
 <ul>
-<li>BIOL 314 or NRES 217 (Basic Ecology)<br />
+<li>BIOL 314 or NRES 217 (Ecology)<br />
 </li>
 <li>NRES 310 (Wildlife Ecology and Management)</li>
 </ul>
 </div>
 <div id="class-description" class="section level3">
 <h3>Class description</h3>
-<p>This class will explore how concepts of population ecology (e.g., covered in BIOL 314) can be used to inform the conservation and management of natural populations and ecosystems. We will emphasize practical approaches to problem-solving in ecology, conservation, and wildlife management via creative application of population ecology theory using simulation models and statistics. Topics will include population viability analysis (PVA), site-occupancy models, habitat suitability models, metapopulation models, species co-occurrence models, projecting population response to climate change and more. Laboratory exercises will provide students with hands-on experience with ecological models and their practical applications in the conservation and management of wild populations.</p>
+<p>This class will explore how concepts of population ecology (e.g., covered in BIOL 314) can be used to inform the conservation and management of natural populations and ecosystems. We will emphasize practical approaches to problem-solving in ecology, conservation, and wildlife management via creative application of population ecology theory using simulation models and statistics. Topics will include population viability analysis (PVA), occupancy models, habitat-suitability models, metapopulation models, species co-occurrence models, projecting population response to climate change and more. Laboratory exercises will provide students with hands-on experience with ecological models and their practical applications in the conservation and management of wild populations.</p>
 </div>
 <div id="learning-outcomes" class="section level3">
 <h3>Learning outcomes</h3>
 <ol style="list-style-type: decimal">
 <li>Identify the major classes of models used by ecologists (e.g., statistical vs mechanistic, quantitative vs heuristic, stochastic vs deterministic) and explain how and why ecologists use these models.<br />
 </li>
-<li>Apply tools such as population viability analysis (PVA), site-occupancy models, and metapopulation models to address the conservation and management of natural populations.<br />
+<li>Apply tools such as population viability analysis (PVA), occupancy models, and metapopulation models to address the conservation and management of natural populations.<br />
 </li>
 <li>Perform basic statistics, data visualization, simulation modeling and model validation with Excel, the statistical computing language “R”, and the web-based software, InsightMaker.<br />
 </li>
 <li>Critically evaluate the strength of inferences drawn from ecological simulation models using tools such as cross-validation and sensitivity analysis.<br />
 </li>
-<li>Explain how species interactions can influence predictions of species range shifts and the biodiversity response to global change, and formulate strategies for accounting for species interactions in ecological models.<br />
+<li>Explain how species interactions can influence population dynamics (e.g., predictions of species range shifts), and formulate strategies for accounting for species interactions in ecological models.<br />
 </li>
-<li>Communicate original research in applied population and community ecology via a professional oral presentation.</li>
+<li>Communicate original research in applied population and community ecology via a professional-style oral presentation.</li>
 </ol>
 </div>
 <div id="grading" class="section level3">
@@ -495,7 +493,7 @@ Quizzes and participation 10% (40 points)<br />
 Group project 25% (100 points)<br />
 Midterm exam # 1 (date TBD) 10% (40 points)<br />
 Midterm exam # 2 (date TBD) 10% (40 points)<br />
-Final exam (16 May, 230pm) 25% (100 points)</p>
+Final exam (5/11/2018) 25% (100 points)</p>
 <p>NOTE: Graduate students enrolled in NRES 670 will have an additional 50 pts used to calculate their grade (see below) of a total of 370 points. Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82 to 80), C+ (79 to 77), C (76 to 73), C- (72 to 70), D+ (69 to 67), D (66 to 63), D- (62 to 60), F (below 60).</p>
 </div>
 <div id="exams" class="section level3">
@@ -512,11 +510,11 @@ Final exam (16 May, 230pm) 25% (100 points)</p>
 </div>
 <div id="final-group-project" class="section level3">
 <h3>Final group project</h3>
-<p>Students will work in groups of ~2-3 people to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.</p>
+<p>Students will work in groups of ~2-3 to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.</p>
 </div>
-<div id="graduate-credit-for-those-enrolled-in-nres670" class="section level3">
-<h3>Graduate credit (for those enrolled in NRES670)</h3>
-<p>Graduate students will be subject to additional expectations in order to receive graduate credit for this course. In particular, graduate student final group projects are expected to be more in-depth than undergraduate group projects. To this end, graduate student presentations will be longer, and project write-ups will be expected to be of publication-quality (and formatted in the style of an appropriate journal). Graduate students will also be expected to achieve a deeper understanding of the course material, and therefore will be assigned additional readings from the scientific literature.</p>
+<div id="graduate-credit-for-students-enrolled-in-nres-670" class="section level3">
+<h3>Graduate credit (for students enrolled in NRES 670)</h3>
+<p>Graduate students will be subject to additional expectations in order to receive graduate credit for this course. In particular, graduate students will be expected to develop an original lecture and lead an original lab activity. Graduate students will also be expected to achieve a deeper understanding of the course material, and therefore will be assigned additional readings from the scientific literature and will be expected to participate as leaders in discussions and lab activities.</p>
 </div>
 <div id="make-up-policy-and-late-work" class="section level3">
 <h3>Make-up policy and late work:</h3>
@@ -544,7 +542,7 @@ Final exam (16 May, 230pm) 25% (100 points)</p>
 </div>
 <div id="class-protocol" class="section level3">
 <h3>Class protocol</h3>
-<p>All electronic devices are to be turned off during class unless the instructor gives advance permission.</p>
+<p>All mobile electronic devices are to be turned off during class unless the instructor gives advance permission (but laptop computers will be used in class regularly).</p>
 </div>
 
 
