--- a/LECTURE1.html
+++ b/LECTURE1.html
@@ -425,8 +425,8 @@ div.tocify {
 </div>
 <div id="systems-ecology-a-way-of-thinking" class="section level2">
 <h2>Systems ecology: a way of thinking</h2>
-<p>Ecology is messy. When we work in nature, we are dealing with <em>inherently complex systems</em>. <em>All elements in a natural system are connected</em>, full of dynamic interactions. Interactions among organisms, between organisms and their environment to meet basic needs – these linkages are what makes ecology messy, but also endlessly fascinating.</p>
-<p>We can think of humans as just another element in these complex systems. And wildlife conservation and mangement is the task of manipulating or tweaking these linkages to meet societal objectives for natural systems.</p>
+<p>Ecology is messy. When we work in natural environments, we are dealing with <em>inherently complex systems</em>. <em>All elements in a natural system are connected</em>, full of dynamic interactions. Interactions among organisms, between organisms and their environment to meet basic needs – these linkages are what makes ecology messy, but also endlessly fascinating.</p>
+<p>We can think of humans as just another element in these complex systems. And wildlife conservation and mangement is the task of manipulating these linkages to meet societal objectives for natural systems.</p>
 <p>This is not a systems ecology class!</p>
 <p>BUT, systems ecology provides a great framework for thinking about natural populations, understanding how linkages (abiotic and biotic environments) might affect them, and how to manage natural populations most effectively.</p>
 </div>
