--- a/index.html
+++ b/index.html
@@ -420,21 +420,17 @@ div.tocify {
 
 <p><strong>Instructor:</strong> Kevin Shoemaker<br />
 <strong>Teaching Assistant</strong> Ben Sedinger<br />
-<strong>Instructor’s Office</strong>: FA 220E<br />
+<strong>Website</strong>: <a href="http://naes.unr.edu/shoemaker/teaching/NRES-470/index.html">naes.unr.edu/shoemaker/teaching/NRES-470</a><br />
 <strong>Phone</strong>: (775) 682-7449<br />
 <strong>Email</strong>: kshoemaker_at_cabnr.unr.edu</p>
-<p><strong>Website</strong>: <a href="http://naes.unr.edu/shoemaker/teaching/NRES-470/index.html">naes.unr.edu/shoemaker/teaching/NRES-470</a></p>
 <div id="course-meeting-times" class="section level3">
 <h3>Course Meeting Times</h3>
 <p><strong>Lecture &amp; Discussion</strong>: M, W at 10am (50 mins) (NOTE: please bring your laptop to class!)<br />
-<strong>Lab</strong>: F at 10am (3 hours) <strong>Office hours</strong>:<br />
+<strong>Lab</strong>: F at 10am (3 hours)<br />
+- Lectures and Labs will be held in <strong>FA 301</strong></p>
+<p><strong>Office hours</strong>:<br />
 - Shoemaker: Wed from 11 to noon (FA 220E)<br />
-- Sedinger: TBD</p>
-<ul>
-<li>Lectures and Labs will be held in <strong>FA 301</strong><br />
-</li>
-<li>Labs may occasionally be held in the NRES computer lab (<strong>FA 234</strong>)</li>
-</ul>
+- Sedinger: Mon from 11 to noon (FA 220E)</p>
 </div>
 <div id="texts" class="section level3">
 <h3>Texts</h3>
