--- a/schedule.html
+++ b/schedule.html
@@ -616,14 +616,14 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/25/2018</td>
-<td align="left">LECTURE 2: Case study: desert mule deer management</td>
+<td align="left">LECTURE 2: Case study: desert mule deer management?</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/27/2018</td>
-<td align="left">LAB: Case study: mule deer management (led by Jerrod and Nathan) (FINAL PAPER DRAFT DUE)</td>
+<td align="left">LAB: Case study: led by graduate students?</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
